@@ -1,4 +1,6 @@
 -------------------------------------------------
+GearSwap 0.871 - Debugging and Logging changes.
+-------------------------------------------------
 GearSwap 0.870 - Rewrite of "order" as "priority" for advanced tables.
 -------------------------------------------------
 GearSwap 0.868 - Ironed out some bugs. Added .in_mog_house. Made pet_change work for gaining charmed pets.
